[gd_scene load_steps=17 format=3 uid="uid://cyw4ijuiqkcir"]

[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="1_ejuwi"]
[ext_resource type="Script" path="res://scripts/SeedPouchMarker.gd" id="2_w2rpf"]
[ext_resource type="PackedScene" uid="uid://dsovbdr3nkavq" path="res://Scenes/water_tap.tscn" id="3_yaddo"]
[ext_resource type="Texture2D" uid="uid://cf5xxdufb0v2v" path="res://Assets/Sprites/UISprites/LeftArrow.png" id="4_ftogj"]
[ext_resource type="Texture2D" uid="uid://bty7uvdq5owoh" path="res://Assets/Sprites/UISprites/RightArrow.png" id="5_pxjxb"]
[ext_resource type="FontFile" uid="uid://c3jn081c7a8ic" path="res://Assets/Fonts/m5x7.ttf" id="6_g0anq"]
[ext_resource type="Texture2D" uid="uid://cjuahf3c1vw06" path="res://Assets/Sprites/UISprites/SmallGoldIcon.png" id="7_rjdg3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hmvow"]
radius = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnm3o"]
size = Vector2(45.75, 114.75)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjp0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eg8ag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ked7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60i3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw8he"]
size = Vector2(46, 114.875)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bypxh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bknmp"]

[node name="Camera2D" type="Camera2D"]
position = Vector2(0, 12)
offset = Vector2(320, 0)
zoom = Vector2(3, 3)
script = ExtResource("1_ejuwi")

[node name="SeedPouchMarker" type="Area2D" parent="."]
position = Vector2(86, 56)
collision_layer = 0
collision_mask = 8
script = ExtResource("2_w2rpf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeedPouchMarker"]
shape = SubResource("CircleShape2D_hmvow")

[node name="WaterTap" parent="." instance=ExtResource("3_yaddo")]
z_index = 4
position = Vector2(299, 67)

[node name="LeftArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(22.125, -9.375)
shape = SubResource("RectangleShape2D_mnm3o")

[node name="LeftArrow" type="Sprite2D" parent="LeftArea"]
visible = false
z_index = 10
position = Vector2(22, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ftogj")

[node name="LeftArrow2" type="Sprite2D" parent="LeftArea"]
visible = false
z_index = 10
position = Vector2(31, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ftogj")

[node name="BuyLeftButton" type="Button" parent="LeftArea"]
visible = false
offset_left = 2.0
offset_top = -64.0
offset_right = 22.0
offset_bottom = -51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.862745, 0.717647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_g0anq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rjp0a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eg8ag")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8ked7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_60i3e")
text = "100"
alignment = 0

[node name="Expand" type="Label" parent="LeftArea/BuyLeftButton"]
layout_mode = 0
offset_left = -2.0
offset_top = 13.0
offset_right = 36.0
offset_bottom = 26.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("6_g0anq")
text = "Expand"
horizontal_alignment = 2

[node name="SmallGoldIcon" type="Sprite2D" parent="LeftArea/BuyLeftButton"]
position = Vector2(24, 8)
texture = ExtResource("7_rjdg3")

[node name="RightArea" type="Area2D" parent="."]
position = Vector2(-23, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(640, -5.4375)
shape = SubResource("RectangleShape2D_yw8he")

[node name="RightArrow" type="Sprite2D" parent="RightArea"]
visible = false
z_index = 10
position = Vector2(641, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_pxjxb")

[node name="RightArrow2" type="Sprite2D" parent="RightArea"]
visible = false
z_index = 10
position = Vector2(632, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_pxjxb")

[node name="BuyRightButton" type="Button" parent="RightArea"]
visible = false
offset_left = 604.0
offset_top = -60.0
offset_right = 653.0
offset_bottom = -47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.862081, 0.717413, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_g0anq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rjp0a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eg8ag")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bypxh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bknmp")
text = "100"
flat = true
alignment = 2

[node name="Expand" type="Label" parent="RightArea/BuyRightButton"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 55.0
offset_bottom = 26.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("6_g0anq")
text = "Expand"
horizontal_alignment = 2

[node name="SmallGoldIcon" type="Sprite2D" parent="RightArea/BuyRightButton"]
position = Vector2(53, 8)
texture = ExtResource("7_rjdg3")

[connection signal="area_entered" from="SeedPouchMarker" to="SeedPouchMarker" method="_on_area_entered"]
[connection signal="body_entered" from="SeedPouchMarker" to="SeedPouchMarker" method="_on_body_entered"]
[connection signal="mouse_entered" from="LeftArea" to="." method="_on_left_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftArea" to="." method="_on_left_area_mouse_exited"]
[connection signal="pressed" from="LeftArea/BuyLeftButton" to="." method="_on_buy_left_button_pressed"]
[connection signal="mouse_entered" from="RightArea" to="." method="_on_right_area_mouse_entered"]
[connection signal="mouse_exited" from="RightArea" to="." method="_on_right_area_mouse_exited"]
[connection signal="pressed" from="RightArea/BuyRightButton" to="." method="_on_buy_right_button_pressed"]
